# aula20-bootcamp-python

./: README.md  docker-compose.yml  pyproject.toml
backend/: app.py  database.py  models.py  schemas.py  settings.py
backend/migrations/: env.py
backend/migrations/versions/: 12565dc7109c_create_products_table.py
backend/routers/: products.py
